--- a/src/scss/blocks/areas-promo.scss
+++ b/src/scss/blocks/areas-promo.scss
@@ -23,6 +23,7 @@
 		font-weight: 400;
 		font-size: 16px;
 		line-height: 19px;
+		text-align: justify;
 		div {
 			margin-bottom: 20px;
 		}
@@ -33,6 +34,65 @@
 	}
 }
 
-@media (max-width: 1199.98px){}
-@media (max-width: 767.98px){}
-@media (max-width: 576.98px) {}
+@media (max-width: 1199.98px){
+	.areas-promo {
+		.title {
+			font-size: 90px ;
+		}
+	}
+}
+@media (max-width: 991.98px){
+	.areas-promo {
+		&_wrapper {
+			display: grid;
+			grid-template-columns: 50% 50%;
+			grid-template-rows: auto 330px;
+		}
+		.title {
+			grid-column: 1/3;
+			font-size: 98px;
+			height: 100%;
+		}
+		.form {
+			width: 100%;
+			border-top: $border;
+			border-left: none;
+		}
+		&_text {
+			width: 100%;
+			padding: 0px 10px 0px 5px;
+		}
+	}
+}
+@media (max-width: 767.98px){
+	.areas-promo {
+		margin-top: 25px;
+		.title {
+			font-size: 80px;
+			line-height: 88px;
+			width: 100%;
+			padding-top: 0;
+		}
+		&_img {
+			height: 230px;
+			width: 100%;
+		}
+	}
+
+}
+@media (max-width: 576.98px) {
+	.areas-promo {
+		.title {
+			font-size: 40px;
+			line-height: 44px;
+		}
+		&_wrapper {
+			display: block;
+		}
+		.form {
+			border-bottom: $border;
+			border-right: none;
+			padding: 40px 0px 20px 0px;
+		}
+	}
+}
