Creted 9 pages for each service

--- a/src/scss/blocks/contact.scss
+++ b/src/scss/blocks/contact.scss
@@ -132,6 +132,13 @@
 			width: 290px;
 			padding-right: 10px;
 			margin: 0 auto;
+			&_button {
+				&:hover {
+					color: $first-color;
+					background: #ffff;
+					border: none;
+				}
+			}
 		}
 	}
 }
