--- a/src/scss/blocks/service-questions.scss
+++ b/src/scss/blocks/service-questions.scss
@@ -42,6 +42,12 @@
 			&::after {
 				transform: rotate(-90deg);
 			}
+			&_active {
+				&::after {
+					transform: rotate(0deg);
+				}
+			}
+			
 		}
 		&_descr {
 			display: none;
