--- a/src/scss/blocks/book-a-service.scss
+++ b/src/scss/blocks/book-a-service.scss
@@ -7,7 +7,7 @@
 	}
 	.form {
 		padding-top: 50px;
-		width: 730px;
+		max-width: 730px;
 		margin: 0 auto 70px auto;
 		&_input {
 			margin-top: 20px;
@@ -55,16 +55,43 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	min-height: 500px;
+	height: 500px;
 	background-color: #F8FAFF;
 	padding: 100px 60px 40px 60px;
 	text-align: center;
 	z-index: 2;
+	.title {
+		max-width: 780px;
+		max-height: 370px;
+		.mt40{
+			margin-top: 40px;
+		}
+	}
 	.button {
 		margin-top: 100px;
 	}
 }
 
-@media (max-width: 1199.98px){}
-@media (max-width: 767.98px){}
-@media (max-width: 576.98px) {}
+@media (max-width: 950.98px){
+	.book-a-service {
+		.title {
+			font-size: 40px;
+			line-height: 40px;
+		}.form {
+			max-width: 340px;
+		}
+	}
+	.popup {
+		height: 325px;
+		width: 290px;
+		padding: 20px 40px;
+		.title {
+			font-size: 40px;
+			line-height: 40px;
+			max-width: 335px;
+		}
+		.button {
+			margin-top: 40px;
+		}
+	}
+}
