--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -58,6 +58,7 @@ body {
 @import "blocks/areas-promo";
 @import "blocks/areas-repair";
 @import "blocks/book-a-service";
+@import "blocks/privacy-policy";
 @import "blocks/header-media";
 //</blocks>===================================================================================
 
