--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -1,4 +1,10 @@
 .header {
+	background-color: rgba($color: #F8FAFF, $alpha: 0.7);
+	overflow: hidden;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 5;
 	.container{
 		display: flex;
 		justify-content: space-between;
