Added mask for phone in forms; changed image for cities

--- a/src/scss/blocks/main.scss
+++ b/src/scss/blocks/main.scss
@@ -3,7 +3,7 @@
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: 50%;
-	background-image: url('../../img/bg-promo.png');
+	background-image: url('../../img/bg-image.png');
 	.container {
 		display: flex;
 		justify-content: space-between;
