--- a/src/scss/blocks/areas-promo.scss
+++ b/src/scss/blocks/areas-promo.scss
@@ -1,4 +1,5 @@
 .areas-promo {
+	margin-top: 103px;
 	&_wrapper {
 		display: flex;
 		min-height: 360px;
@@ -31,6 +32,13 @@
 	&_img {
 		margin: 15px 0px;
 		width: 100%;
+		height: 280px;
+		img {
+			display: block;
+			width: 100%;
+			height: 100%;
+			object-fit:cover;
+		}
 	}
 }
 
@@ -62,6 +70,7 @@
 			width: 100%;
 			padding: 0px 10px 0px 5px;
 		}
+
 	}
 }
 @media (max-width: 767.98px){
@@ -82,6 +91,7 @@
 }
 @media (max-width: 576.98px) {
 	.areas-promo {
+		margin-top: 50px;
 		.title {
 			font-size: 40px;
 			line-height: 44px;
