--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -59,6 +59,7 @@ body {
 @import "blocks/areas-repair";
 @import "blocks/book-a-service";
 @import "blocks/privacy-policy";
+@import "blocks/error-page";
 @import "blocks/header-media";
 //</blocks>===================================================================================
 
